--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,3 +1,62 @@
+
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+:root {
+  --main-color: #f97316;
+  --black-color: #2e2e2e;
+  --white-color: #ffffff;
+  --body-color: #f0f0f0;
+  --body-font: "Inter", serif;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
+}
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+body {
+  color: var(--black-color);
+  background: var(--body-color);
+  font-family: var(--body-font);
+  font-size: 12px;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+li {
+  list-style: none;
+}
+.container {
+  width: 1220px;
+  max-width: 100%;
+  margin: auto;
+}
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
+
+/*!*******************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[2]!./node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[3]!./src/styles/header.css ***!
+  \*******************************************************************************************************************************************************************************************************************************************************************/
 /*!*****************************************************************************************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[2]!./node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[3]!./src/app/globals.css ***!
   \*****************************************************************************************************************************************************************************************************************************************************************/
@@ -371,6 +430,7 @@ li {
   width: 100%;
   background: none;
   border: none;
+  outline: none;
   padding: 13px;
 }
 button.form-search-btn {
@@ -418,14 +478,15 @@ button.form-search-btn {
   padding: 0;
   margin: 0;
   list-style: none;
-  /* padding-bottom: 12px; */
-  gap: 11px;
   padding: 12px 0;
 }
 
 li.megamenu-container {
   position: static;
-  padding: 0 10px;
+  padding: 5px 10px;
+}
+li.megamenu-container.active .cate-megamenu-list {
+  color: var(--main-color);
 }
 
 a.cate-megamenu-list {
@@ -434,8 +495,8 @@ a.cate-megamenu-list {
   justify-content: space-between;
   text-decoration: none;
   font-weight: 400;
+  text-transform: capitalize;
   color: var(--black-color);
-  border-radius: 4px;
   transition: background 0.3s;
 }
 li.megamenu-container .megamenu {
@@ -462,31 +523,70 @@ a.sub-megamenu-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* padding: 8px 10px; */
   text-decoration: none;
-  color: #333;
-  font-weight: normal;
+  text-transform: capitalize;
   transition: color 0.3s;
+  font-weight: 400;
+  color: var(--black-color);
 }
-
-a.sub-megamenu-list:hover {
-  color: #f9c846;
+a.sub-sub-megamenu-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-decoration: none;
+  transition: color 0.3s;
+  text-transform: capitalize;
+  font-weight: 400;
+  color: var(--black-color);
 }
 
 ul.sub-menu-vertical {
-  position: static;
+  display: flex;
+  flex-direction: column;
   padding: 0;
+  margin: 0;
   list-style: none;
+  padding: 12px 0;
 }
-
+li.sub-sub-menu-vertical-list {
+  position: static;
+  padding: 5px 10px;
+}
 li.sub-menu-vertical-list {
   position: static;
-  padding: 12px 5px 12px 10px;
+  padding: 5px 10px;
+}
+li.sub-menu-vertical-list.active .sub-megamenu-list {
+  color: var(--main-color);
+  font-weight: 500;
 }
 
+li.sub-sub-menu-vertical-list.active .sub-megamenu-list {
+  color: var(--main-color);
+  font-weight: 500;
+}
+
+li.sub-sub-menu-vertical-list.active .sub-sub-megamenu-list {
+  color: var(--main-color);
+  font-weight: 500;
+}
 li.sub-menu-vertical-list .sub-megamenu {
   position: absolute;
-  top: -12px;
+  top: 0px;
+  left: 100%;
+  background: var(--white-color, #fff);
+  width: 350px;
+
+  display: none;
+  opacity: 0;
+  height: 100%;
+  transform: translateY(10px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  border-left: 0.5px solid #d6d6d6;
+}
+li.sub-menu-vertical-list .sub-sub-megamenu {
+  position: absolute;
+  top: 0px;
   left: 100%;
   background: var(--white-color, #fff);
   width: 350px;
@@ -500,6 +600,11 @@ li.sub-menu-vertical-list .sub-megamenu {
 }
 
 li.sub-menu-vertical-list:hover .sub-megamenu {
+  display: block;
+  opacity: 1;
+  transform: translateY(0);
+}
+li.sub-sub-menu-vertical-list:hover .sub-sub-megamenu {
   display: block;
   opacity: 1;
   transform: translateY(0);
